fixed checkstyle warnings for connection package